Refine styles and fix layout issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,11 +16,17 @@ body {
 .error-message {
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
   font-size: 18px;
   font-weight: bold;
   background: rgb(255, 31, 31);
   padding: 12px 16px;
   border-radius: 25px;
+}
+.flex{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .center {
@@ -34,7 +40,7 @@ body {
 }
 
 h2 {
-  margin-bottom: 15px;
+  margin: 15px 0;
   font-size: 1.3rem;
 }
 
@@ -84,7 +90,7 @@ h2 {
   background-color: #d41c1c;
   transform: translateY(5px);
 }
-#pokemon-data {
+.pokemon-container {
   display: flex;
   justify-content: center;
   margin-top: 15px;
@@ -155,12 +161,6 @@ h2 {
   margin-top: 5px;
 }
 
-#evolution-data {
-  text-align: center;
-  margin: 20px 0;
-  padding: 20px;
-}
-
 .evolution-tree {
   display: flex;
   justify-content: center;
@@ -185,6 +185,99 @@ h2 {
   text-transform: uppercase;
   color: white;
 }
+
+.stats-card {
+  position: absolute;  
+  left: 65%;
+  margin-top: 50px;
+  width: 100%;
+  max-width: 350px;
+  border: 4px solid #c0c0c0;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7);
+  color: #fff;
+  font-family: "Arial", sans-serif;
+  text-align: left; 
+  padding: 20px;
+  border-radius: 15px; 
+  font-size: 1.1rem;
+}
+
+
+.stats-content {
+  padding: 10px 0;
+}
+
+.stats-card p {
+  font-size: 1.2rem;
+  font-weight: 600; 
+  color: #ffffff;
+  margin-bottom: 15px;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5); 
+}
+
+.stats-card p strong {
+  color: #ffcc00; 
+  font-size: 1.4rem; 
+  text-transform: uppercase;
+  font-family: 'Press Start 2P', sans-serif;
+  letter-spacing: 2px;
+}
+
+.stats-card p span {
+  font-size: 1.2rem;
+  color: #fffae1; 
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+.abilities-card {
+  position: absolute;  
+  left: 15%; 
+  margin-top: 100px;
+  width: 100%;
+  max-width: 350px;
+  border: 4px solid #c0c0c0;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7);
+  color: #fff;
+  font-family: "Arial", sans-serif;
+  text-align: left;
+  padding: 20px;
+  border-radius: 15px;
+  font-size: 1.1rem;
+}
+
+.abilities-content {
+  padding: 10px 0;
+}
+
+.abilities-card p {
+  font-size: 1.2rem;
+  font-weight: 600; 
+  color: #ffffff;
+  margin-bottom: 15px;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5); 
+}
+
+.abilities-card p strong {
+  color: #ffcc00; 
+  font-size: 1.4rem; 
+  text-transform: uppercase;
+  font-family: 'Press Start 2P', sans-serif;
+  letter-spacing: 2px;
+}
+
+.abilities-card p span {
+  font-size: 1.2rem;
+  color: #fffae1; 
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+
+@media (min-width: 686px) {
+  .stats-card {
+    max-width: 400px;
+  }
+}
+
 
 @media (min-width: 350px) {
   .heading {
